--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,7 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+env_files:
+  github_token: ~/.config/goreleaser/github_token
 before:
   hooks:
     # You may remove this if you don't use go modules.
